<?xml version="1.0" encoding="UTF-8" ?>
<project
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
>
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.CodeIntelligenceTesting.cifuzz</groupId>
	<artifactId>maven-multi-example</artifactId>
	<version>1.0-SNAPSHOT</version>

	<packaging>pom</packaging>

	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<repositories>
		<repository>
			<id>code-intelligence</id>
			<url>https://gitlab.code-intelligence.com/api/v4/projects/89/packages/maven</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>code-intelligence</id>
			<url>https://gitlab.code-intelligence.com/api/v4/projects/89/packages/maven</url>
		</pluginRepository>
	</pluginRepositories>

	<build>
		<plugins>
			<plugin>
				<groupId>com.code-intelligence</groupId>
				<artifactId>cifuzz-maven-extension</artifactId>
				<version>1.1.0</version>
				<extensions>true</extensions>
			</plugin>
		</plugins>
	</build>

	<modules>
		<module>app</module>
		<module>testsuite</module>
	</modules>
</project>
